rust/flowi_core_sys/src/generated/json.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// The various types JSON values can be. Used to identify what a value is
/// (FlJsonValue.type stores one of these as a size_t).
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum JsonType {
    String = 0,
    Number = 1,
    Object = 2,
    Array = 3,
    True = 4,
    False = 5,
    Null = 6,
}

const _: () = {
    assert!(core::mem::size_of::<JsonType>() == 4, "JsonType size drift");
    assert!(core::mem::align_of::<JsonType>() == 4, "JsonType align drift");
};

/// Result of a JSON parse: the error code (FlJsonParseResult.error) and the
/// value returned by fl_json_get_error_description.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum JsonParseError {
    /// no error occurred (huzzah!).
    None = 0,
    /// expected either a comma or a closing '}' or ']' to close an object or array.
    ExpectedCommaOrClosingBracket = 1,
    /// colon separating name/value pair was missing.
    ExpectedColon = 2,
    /// expected string to begin with '"'.
    ExpectedOpeningQuote = 3,
    /// invalid escaped sequence in string.
    InvalidStringEscapeSequence = 4,
    /// invalid number format.
    InvalidNumberFormat = 5,
    /// invalid value.
    InvalidValue = 6,
    /// reached end of buffer before object/array was complete.
    PrematureEndOfBuffer = 7,
    /// string was malformed.
    InvalidString = 8,
    /// a size_t is not large enough to record the allocation.
    AllocatorFailed = 9,
    /// the JSON input had unexpected trailing characters.
    UnexpectedTrailingCharacters = 10,
    /// catch-all error for everything else that exploded (real bad chi!).
    Unknown = 11,
    /// input was nested deeper than the parser's depth limit.
    TooDeep = 12,
}

const _: () = {
    assert!(core::mem::size_of::<JsonParseError>() == 4, "JsonParseError size drift");
    assert!(core::mem::align_of::<JsonParseError>() == 4, "JsonParseError align drift");
};

/// A JSON number value.
#[repr(C)]
pub struct JsonNumber {
    /// ASCII string containing representation of the number.
    pub number: *const core::ffi::c_char,
    /// the size (in bytes) of the number.
    pub number_size: usize,
}

const _: () = {
    assert!(core::mem::size_of::<JsonNumber>() == 16, "JsonNumber size drift");
    assert!(core::mem::align_of::<JsonNumber>() == 8, "JsonNumber align drift");
    assert!(core::mem::offset_of!(JsonNumber, number) == 0, "JsonNumber.number offset drift");
    assert!(core::mem::offset_of!(JsonNumber, number_size) == 8, "JsonNumber.number_size offset drift");
};

/// An element of a JSON object.
#[repr(C)]
pub struct JsonObjectElement {
    /// the name of this element.
    pub name: *mut crate::RawStr,
    /// the value of this element.
    pub value: *mut crate::JsonValue,
    /// the next object element (can be nullptr if the last element in the object).
    pub next: *mut crate::JsonObjectElement,
}

const _: () = {
    assert!(core::mem::size_of::<JsonObjectElement>() == 24, "JsonObjectElement size drift");
    assert!(core::mem::align_of::<JsonObjectElement>() == 8, "JsonObjectElement align drift");
    assert!(core::mem::offset_of!(JsonObjectElement, name) == 0, "JsonObjectElement.name offset drift");
    assert!(core::mem::offset_of!(JsonObjectElement, value) == 8, "JsonObjectElement.value offset drift");
    assert!(core::mem::offset_of!(JsonObjectElement, next) == 16, "JsonObjectElement.next offset drift");
};

/// A JSON object value.
#[repr(C)]
pub struct JsonObject {
    /// a linked list of the elements in the object.
    pub start: *mut crate::JsonObjectElement,
    /// the number of elements in the object.
    pub length: usize,
}

const _: () = {
    assert!(core::mem::size_of::<JsonObject>() == 16, "JsonObject size drift");
    assert!(core::mem::align_of::<JsonObject>() == 8, "JsonObject align drift");
    assert!(core::mem::offset_of!(JsonObject, start) == 0, "JsonObject.start offset drift");
    assert!(core::mem::offset_of!(JsonObject, length) == 8, "JsonObject.length offset drift");
};

/// An element of a JSON array.
#[repr(C)]
pub struct JsonArrayElement {
    /// the value of this element.
    pub value: *mut crate::JsonValue,
    /// the next array element (can be nullptr if the last element in the array).
    pub next: *mut crate::JsonArrayElement,
}

const _: () = {
    assert!(core::mem::size_of::<JsonArrayElement>() == 16, "JsonArrayElement size drift");
    assert!(core::mem::align_of::<JsonArrayElement>() == 8, "JsonArrayElement align drift");
    assert!(core::mem::offset_of!(JsonArrayElement, value) == 0, "JsonArrayElement.value offset drift");
    assert!(core::mem::offset_of!(JsonArrayElement, next) == 8, "JsonArrayElement.next offset drift");
};

/// A JSON array value.
#[repr(C)]
pub struct JsonArray {
    /// a linked list of the elements in the array.
    pub start: *mut crate::JsonArrayElement,
    /// the number of elements in the array.
    pub length: usize,
}

const _: () = {
    assert!(core::mem::size_of::<JsonArray>() == 16, "JsonArray size drift");
    assert!(core::mem::align_of::<JsonArray>() == 8, "JsonArray align drift");
    assert!(core::mem::offset_of!(JsonArray, start) == 0, "JsonArray.start offset drift");
    assert!(core::mem::offset_of!(JsonArray, length) == 8, "JsonArray.length offset drift");
};

/// A JSON value.
#[repr(C)]
pub struct JsonValue {
    /// a pointer to either a FlString, FlJsonNumber, FlJsonObject, or FlJsonArray.
    /// Should be cast to the appropriate struct type based on the value's type.
    pub payload: *mut core::ffi::c_void,
    /// must be one of FlJsonType. If type is True/False/Null, payload is nullptr.
    pub r#type: usize,
}

const _: () = {
    assert!(core::mem::size_of::<JsonValue>() == 16, "JsonValue size drift");
    assert!(core::mem::align_of::<JsonValue>() == 8, "JsonValue align drift");
    assert!(core::mem::offset_of!(JsonValue, payload) == 0, "JsonValue.payload offset drift");
    assert!(core::mem::offset_of!(JsonValue, r#type) == 8, "JsonValue.type offset drift");
};

/// A JSON parse result.
#[repr(C)]
pub struct JsonParseResult {
    /// the error code (one of FlJsonParseError).
    pub error: crate::JsonParseError,
    /// the character offset for the error in the JSON input.
    pub error_offset: usize,
    /// the line number for the error in the JSON input.
    pub error_line_no: usize,
    /// the row number for the error in the JSON input.
    pub error_row_no: usize,
}

const _: () = {
    assert!(core::mem::size_of::<JsonParseResult>() == 32, "JsonParseResult size drift");
    assert!(core::mem::align_of::<JsonParseResult>() == 8, "JsonParseResult align drift");
    assert!(core::mem::offset_of!(JsonParseResult, error) == 0, "JsonParseResult.error offset drift");
    assert!(core::mem::offset_of!(JsonParseResult, error_offset) == 8, "JsonParseResult.error_offset offset drift");
    assert!(core::mem::offset_of!(JsonParseResult, error_line_no) == 16, "JsonParseResult.error_line_no offset drift");
    assert!(core::mem::offset_of!(JsonParseResult, error_row_no) == 24, "JsonParseResult.error_row_no offset drift");
};

// The `fl_json_*` arena-backed JSON parser / DOM. Parse a buffer into a tree of
// FlJsonValue, navigate and type-extract from it, then write it back out.
extern "C" {
    /// Parse a JSON buffer into a DOM allocated from arena. Returns nullptr on error.
    pub fn fl_json_parse(arena: *mut crate::Arena, src: *const core::ffi::c_void, src_size: usize) -> *mut crate::JsonValue;
    /// Parse without location tracking (faster; for validated JSON that won't be edited).
    pub fn fl_json_parse_no_location(arena: *mut crate::Arena, src: *const core::ffi::c_void, src_size: usize) -> *mut crate::JsonValue;
    /// Parse with explicit flags_bitset (FlJsonParseFlags OR-combined) and an optional result out-param.
    pub fn fl_json_parse_with_flags(arena: *mut crate::Arena, src: *const core::ffi::c_void, src_size: usize, flags_bitset: usize, result: *mut crate::JsonParseResult) -> *mut crate::JsonValue;
    /// Deep-copy value (and all it references) into a fresh value allocated from arena.
    pub fn fl_json_extract_value(arena: *mut crate::Arena, value: *const crate::JsonValue) -> *mut crate::JsonValue;
    /// Write value out as a minified UTF-8 JSON string, allocated from arena.
    pub fn fl_json_write_minified(arena: *mut crate::Arena, value: *const crate::JsonValue) -> crate::RawStr;
    /// Write value out as a pretty UTF-8 JSON string (indent/newline may be nullptr), allocated from arena.
    pub fn fl_json_write_pretty(arena: *mut crate::Arena, value: *const crate::JsonValue, indent: *const core::ffi::c_char, newline: *const core::ffi::c_char) -> crate::RawStr;
    /// Reinterpret a value as a string. Returns empty if not a string.
    pub fn fl_json_value_as_string(value: *mut crate::JsonValue) -> crate::RawStr;
    /// Reinterpret a value as a number. Returns nullptr if not a number.
    pub fn fl_json_value_as_number(value: *mut crate::JsonValue) -> *mut crate::JsonNumber;
    /// Reinterpret a value as an object. Returns nullptr if not an object.
    pub fn fl_json_value_as_object(value: *mut crate::JsonValue) -> *mut crate::JsonObject;
    /// Reinterpret a value as an array. Returns nullptr if not an array.
    pub fn fl_json_value_as_fixed_array(value: *mut crate::JsonValue) -> *mut crate::JsonArray;
    /// Whether the value is true.
    pub fn fl_json_value_is_true(value: *const crate::JsonValue) -> i32;
    /// Whether the value is false.
    pub fn fl_json_value_is_false(value: *const crate::JsonValue) -> i32;
    /// Whether the value is null.
    pub fn fl_json_value_is_null(value: *const crate::JsonValue) -> i32;
    /// Whether the value is a boolean (true or false).
    pub fn fl_json_value_is_bool(value: *const crate::JsonValue) -> i32;
    /// Get a boolean from a value. Returns 0 if not a boolean or if false.
    pub fn fl_json_value_get_bool(value: *const crate::JsonValue) -> i32;
    /// Get an unsigned 64-bit integer from a number (0x hex supported). Returns 0 if not a number.
    pub fn fl_json_value_get_u64(value: *const crate::JsonValue) -> u64;
    /// Get a signed 32-bit integer from a number. Returns 0 if not a number.
    pub fn fl_json_value_get_i32(value: *const crate::JsonValue) -> i32;
    /// Get a 64-bit float from a number. Returns 0.0 if not a number.
    pub fn fl_json_value_get_f64(value: *const crate::JsonValue) -> f64;
    /// Find a property in an object by key. Returns nullptr if absent.
    pub fn fl_json_find_property(object: *const crate::JsonValue, key: crate::RawStr) -> *mut crate::JsonValue;
    /// Extract a string-typed property by key (empty if absent / wrong type).
    pub fn fl_json_get_string_prop(object: *const crate::JsonValue, key: crate::RawStr) -> crate::RawStr;
    /// Extract a u32-typed property by key (0 if absent / wrong type).
    pub fn fl_json_get_u32_prop(object: *const crate::JsonValue, key: crate::RawStr) -> u32;
    /// Extract an f64-typed property by key (0.0 if absent / wrong type).
    pub fn fl_json_get_f64_prop(object: *const crate::JsonValue, key: crate::RawStr) -> f64;
    /// Extract a bool-typed property by key (0 if absent / wrong type).
    pub fn fl_json_get_bool_prop(object: *const crate::JsonValue, key: crate::RawStr) -> i32;
    /// Extract an object-typed property by key (nullptr if absent / wrong type).
    pub fn fl_json_get_object_prop(object: *const crate::JsonValue, key: crate::RawStr) -> *mut crate::JsonValue;
    /// Extract an array-typed property by key (nullptr if absent / wrong type).
    pub fn fl_json_get_array_prop(object: *const crate::JsonValue, key: crate::RawStr) -> *mut crate::JsonArray;
    /// Source line where value starts (1-based, 0 if unknown).
    pub fn fl_json_get_line_number(value: *const crate::JsonValue) -> usize;
    /// Source column where value starts (1-based, 0 if unknown).
    pub fn fl_json_get_column_number(value: *const crate::JsonValue) -> usize;
    /// Whether position information is available for value.
    pub fn fl_json_has_position_info(value: *const crate::JsonValue) -> i32;
    /// Format a parse error with source context, allocated from arena.
    pub fn fl_json_format_parse_error(arena: *mut crate::Arena, result: *const crate::JsonParseResult, source_text: *const core::ffi::c_char, source_size: usize) -> crate::RawStr;
    /// Human-readable description of a parse error code.
    pub fn fl_json_get_error_description(error: crate::JsonParseError) -> crate::RawStr;
    /// Format a value-anchored error with full context, allocated from arena.
    pub fn fl_json_format_value_error(arena: *mut crate::Arena, value: *const crate::JsonValue, error_message: crate::RawStr, file_path: crate::RawStr, help_text: crate::RawStr) -> crate::RawStr;
    /// Navigate a nested path like "metadata.shortname" (nullptr if not found).
    pub fn fl_json_get_path(root: *const crate::JsonValue, path: crate::RawStr) -> *mut crate::JsonValue;
}

